--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,29 @@
-# ??????? ????????? ??????????
 spring.application.name=restaurant-booking-app
 server.port=8080
 
-# ????????? ??? H2 Database (??? ??????????)
-spring.datasource.url=jdbc:h2:mem:restaurantdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+# ???? ??????
+spring.datasource.url=jdbc:h2:file:./restaurantdb
 spring.datasource.username=sa
 spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+
+# H2 ???????
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.web-allow-others=true
 
-# ????????? JPA/Hibernate
+# JPA
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# ????????? Liquibase
+# Liquibase
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 spring.liquibase.contexts=dev
+spring.liquibase.drop-first=true
 
-# ????????? SMTP ??? ???????? ?????
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=your.email@gmail.com
@@ -30,12 +33,12 @@ spring.mail.properties.smtp.starttls.enabled=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.debug=true
 
-# ????????? ??? ???????? ??????
+
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 file.upload=/DEVELOPMENT/workspace/restaurant-booking-app/uploads
 
-# ???????????
+
 logging.level.root=INFO
 logging.level.de.restaurant_booking_app=DEBUG
 logging.level.org.springframework.security=INFO
