--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,16 @@
 spring.application.name=restaurant-booking-app
 server.port=8080
 
-# ???? ??????
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
+
+
+# ????????? H2 ??
 spring.datasource.url=jdbc:h2:file:./restaurantdb
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
-# H2 ???????
+# H2  ???????
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.web-allow-others=true
@@ -17,17 +20,18 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+
 # Liquibase
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
-spring.liquibase.contexts=dev
+spring.liquibase.contexts=${SPRING_PROFILES_ACTIVE:dev}
 spring.liquibase.drop-first=true
 
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=your.email@gmail.com
-spring.mail.password=your-app-password
+spring.mail.username=lina.goebel0203@gmail.com
+spring.mail.password=xijtxpnuavndbvyu
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.smtp.starttls.enabled=true
 spring.mail.properties.mail.smtp.starttls.enable=true
