--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-# ????????? H2 ??
+# ????????? H2 ???? ??????
 spring.datasource.url=jdbc:h2:file:./restaurantdb
 spring.datasource.username=sa
 spring.datasource.password=
@@ -10,7 +10,7 @@ spring.h2.console.path=/h2-console
 spring.h2.console.settings.web-allow-others=true
 
 # JPA
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
