--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -9,6 +9,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.liquibase.drop-first=false
 
+# Liquibase
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 
@@ -16,3 +17,6 @@ spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 mail.imap.host=imap.gmail.com
 mail.imap.port=993
 mail.imap.ssl.enable=true
+
+# ????????? ??????? H2 ? ?????????
+spring.h2.console.enabled=false
