--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,47 +3,88 @@ server.port=8080
 
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 
-
-# ????????? H2 ??
+# ????????? H2 ???? ??????
 spring.datasource.url=jdbc:h2:file:./restaurantdb
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
-# H2  ???????
+# H2 ???????
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.web-allow-others=true
 
-# JPA
+# JPA ?????????
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
 
 # Liquibase
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 spring.liquibase.contexts=${SPRING_PROFILES_ACTIVE:dev}
-#spring.liquibase.drop-first=true
+# ????????? Liquibase ??????? ????? ??? ?????? ???????
+# spring.liquibase.drop-first=true
 
-
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=lina.goebel0203@gmail.com
-spring.mail.password=xijtxpnuavndbvyu
+# ????????? ????? (????????? ?? ?????????? ?????????)
+spring.mail.host=${MAIL_HOST:smtp.gmail.com}
+spring.mail.port=${MAIL_PORT:587}
+spring.mail.username=${MAIL_USERNAME:your-email@gmail.com}
+spring.mail.password=${MAIL_PASSWORD:your-app-password}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.smtp.starttls.enabled=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.debug=true
 
+# ????????? IMAP ??? ????????? ?????
+mail.imap.host=${MAIL_IMAP_HOST:imap.gmail.com}
+mail.imap.port=${MAIL_IMAP_PORT:993}
+mail.imap.ssl.enable=true
 
+# ???????? ??????
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-file.upload=/DEVELOPMENT/workspace/restaurant-booking-app/uploads
+file.upload=${FILE_UPLOAD_PATH:/DEVELOPMENT/workspace/restaurant-booking-app/uploads}
 
-
+# ???????????
 logging.level.root=INFO
 logging.level.de.restaurant_booking_app=DEBUG
 logging.level.org.springframework.security=INFO
 logging.level.liquibase=INFO
+
+# ????????? ?????????
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
+
+# ????????? Actuator
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+management.health.db.enabled=true
+management.health.mail.enabled=true
+management.info.env.enabled=true
+
+# ????????? ???????????
+notification.enabled=${NOTIFICATION_ENABLED:false}
+
+# ????????? SMS API (???????? ?? ???????? ????????? ?????? SMS ?????)
+sms.api.url=${SMS_API_URL:https://api.example.com/sms/send}
+sms.api.key=${SMS_API_KEY:your-api-key}
+
+# ????????? Push API (????????, Firebase)
+push.api.url=${PUSH_API_URL:https://fcm.googleapis.com/fcm/send}
+push.api.key=${PUSH_API_KEY:your-firebase-server-key}
+
+# ????? ???????? ??????????????
+admin.phone=${ADMIN_PHONE:+79991234567}
+
+# ????????? Actuator ??? Prometheus
+management.endpoints.web.exposure.include=health,info,prometheus,metrics
+management.endpoint.health.show-details=always
+management.endpoint.metrics.enabled=true
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+
+# ???? ??? ??????
+management.metrics.tags.application=${spring.application.name}
+management.metrics.tags.environment=${spring.profiles.active:dev}
